Improved a11y by using aXe.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<button type="button" name="start-button" class="start-button">Let's Go!</button>
 		</div>
 		
-		<div role="container" class="question" >
+		<div class="question" >
 		</div>
 
 		<div class="feedback">
